Fixing PMD issues.